[tool.poetry]
name = "face-recognition"
version = "0.1.0"
description = "A personal facial recognition project using PyTorch"
authors = ["wickeat <wktey91@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.10.0"
torchvision = "^0.11.1"
Pillow = "^9.0.0"
numpy = "^1.21.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry>=1.1.8"]
build-backend = "poetry.masonry.api"
